docs/milestones/v0.92.1/evidence/cloud/aws-a/readbacks/regions/sa-east-1-security-groups.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-0db32c0b75eac9b4a",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0c8b863652c32fac1",
            "SecurityGroupArn": "arn:aws:ec2:sa-east-1:713332525889:security-group/sg-0db32c0b75eac9b4a",
            "OwnerId": "713332525889",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "713332525889",
                            "GroupId": "sg-0db32c0b75eac9b4a"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
